# Floresta

./: .gitignore  README.md  build_floresta.nix  flake.nix  justfile
.github/workflows/: rust.yml
contrib/: setup_coverage.sh
contrib/nix/: build_floresta.nix
crates/floresta-chain/src/: lib.rs
crates/floresta-chain/src/pruned_utreexo/: chain_interfaces.rs  chain_state.rs  chain_state_builder.rs  chainparams.rs  chainstore.rs  consensus.rs  error.rs  flat_chain_store.rs  mod.rs  partial_chain.rs  udata.rs
crates/floresta-cli/src/: lib.rs  rpc.rs  rpc_types.rs
crates/floresta-compact-filters/src/: network_filters.rs
crates/floresta-electrum/src/: electrum_protocol.rs
crates/floresta-node/: Cargo.toml
crates/floresta-node/src/: florestad.rs  lib.rs
crates/floresta-node/src/json_rpc/: server.rs
crates/floresta-rpc/: Cargo.toml
crates/floresta-rpc/src/: lib.rs
crates/floresta-rpc/src/rpc_server/: blockchain.rs  control.rs  request.rs  server.rs
crates/floresta-wire/src/p2p_wire/: address_man.rs  chain_selector.rs  mempool.rs  node.rs  running_node.rs  sync_node.rs
crates/floresta-wire/src/p2p_wire/tests/: sync_node.rs
crates/floresta/examples/: node.rs
florestad/src/json_rpc/: res.rs
hardware-config/: backend-hardware-configuration.nix
tests/: conftest.py  node_manager.py  prepare.sh  run.sh  run_tests.py  test_runner.py
tests/example/: bitcoin.py  electrum.py  functional.py  integration.py  utreexod.py
tests/floresta-cli/: addnode-v2.py  getrpcinfo-test.py
tests/test_framework/: __init__.py  test_framework.py
